1) i18 fixes 2) Start of jid escaping in smack.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5199 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -13,8 +13,11 @@ join = Join
 description = Description
 subject = Subject
 occupants = Occupants
-
-
+accept = Accept
+reject = Reject
+open = Open
+open.folder = Open Folder
+retry = Retry
 
 button.create.account = &Create Account
 button.close = C&lose
@@ -184,7 +187,6 @@ message.subject.change.error = You are not allowed to change the subject of this
 message.forbidden.error = Received a forbidden error from the server.
 message.room.destroyed = This room has been destroyed due to the following reason: {0}
 message.subject.has.been.changed.to = The subject has been changed to {0}.
-
 message.user.kicked.from.room = {0} has been kicked out of the room.
 message.user.given.voice = {0} has been given a voice in this room.
 message.user.voice.revoked = Voice has been revoked for {0}.
@@ -215,7 +217,25 @@ message.broadcast.from = Broadcast from {0}
 message.enter.message.to.broadcast = Enter message to broadcast to your entire roster list.
 message.broadcast.message.sent = The broadcast message has been sent.
 message.broadcast.to = Enter message to broadcast to {0}
-message.broadcasted.to = The message has been broadcasted to the following users:\n
+message.broadcasted.to = The message has been broadcasted to the following users:\n{0}
+message.user.now.available.to.chat = {0} is online at {1}
+message.user.is.sending.you.a.file = {0} is sending you a file.
+message.file.transfer.canceled = You have cancelled the file transfer.
+message.negotiate.file.transfer = Negotiating file transfer. Please wait...
+message.negotiate.stream = Negotiating connection stream. Please wait...
+message.receiving.file = You are receiving a file from {0}
+message.click.to.open = Click to open
+message.error.during.file.transfer = There was an error during file transfer.
+message.transfer.refused = The file transfer was refused.
+message.transfer.cancelled = The file transfer was cancelled.
+message.received.file = You have received a file from {0}.
+message.file.exists.question = The file already exists. Overwrite?
+message.transfer.waiting.on.user = Waiting for {0} to accept file transfer.
+message.negotiation.file.transfer = Negotiating file transfer with {0}. Please wait...
+message.unable.to.send.file = You were unable to send the file to {0}.
+message.sending.file.to = Sending file to {0}.
+message.you.have.sent = You have sent a file to {0}.
+message.file.transfer.rejected = The file transfer was not accepted by {0}.
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -266,7 +286,9 @@ title.edit.custom.message = Edit Custom Messages
 title.set.status.message = Set Status Message
 title.broadcast.message = Broadcast Message
 title.start.chat = Start Chat
-
+title.view.bookmarks = View Bookmarks
+title.downloads = Downloads
+title.file.exists = File Exists
 
 
 menuitem.contacts = Contacts
@@ -328,6 +350,9 @@ menuitem.destroy.room = Destroy Room
 menuitem.set.status.message = Set status message...
 menuitem.edit.status.message = Edit custom status messages...
 menuitem.broadcast.to.group = Broadcast message to group
+menuitem.alert.when.online = Alert when user is available
+menuitem.remove.alert.when.online = Remove Alert
+menuitem.save.as = Save as...
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
@@ -341,14 +366,6 @@ group.conferences.found = Conference Services Found
 group.comma.delimited = Comma Delimited
 
 # TO DO
-# org.jivesoftware.spark.ui.status
-# org.jivesoftware.spark.util
-# org.jivesoftware.spark.util.log
-# org.jivesoftware.sparkimpl.plugin.alerts
-# org.jivesoftware.sparkimpl.plugin.bookmarks
-# org.jivesoftware.sparkimpl.plugin.chat
-# org.jivesoftware.sparkimpl.plugin.emoticons
-# org.jivesoftware.sparkimpl.plugin.filetransfer.transfer
 # org.jivesoftware.sparkimpl.plugin.filetransfer.transfer.ui
 # org.jivesoftware.sparkimpl.plugin.gateways
 # org.jivesoftware.sparkimpl.plugin.gateways.transports
