--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -18,6 +18,8 @@ reject = Reject
 open = Open
 open.folder = Open Folder
 retry = Retry
+active = Active
+not.registered = Not Registered
 
 button.create.account = &Create Account
 button.close = C&lose
@@ -44,6 +46,8 @@ button.accept = &Accept
 button.decline = &Decline
 button.join = &Join
 button.save.for.future.use = &Save for future use
+button.register = &Register
+
 
 checkbox.save.password = &Save Password
 checkbox.auto.login = &Auto Login
@@ -236,6 +240,14 @@ message.unable.to.send.file = You were unable to send the file to {0}.
 message.sending.file.to = Sending file to {0}.
 message.you.have.sent = You have sent a file to {0}.
 message.file.transfer.rejected = The file transfer was not accepted by {0}.
+message.disable.transport = Would you like to disable this active transport?
+message.register.transports = Register with these available transports.
+message.enter.aim = Enter your AIM Screen Name and password below.
+message.enter.msn = Enter your MSN Screen Name and password below.
+message.enter.yahoo = Enter your Screen Name and password to connect to Yahoo.
+message.username.password.error = Username and/or Password need to be supplied.
+message.registration.transport.failed = Unable to register with Transport.
+
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -289,6 +301,13 @@ title.start.chat = Start Chat
 title.view.bookmarks = View Bookmarks
 title.downloads = Downloads
 title.file.exists = File Exists
+title.disable.transport = Disable Transport
+title.available.transports = Available Transports
+title.transports = Transports
+title.aim.registration = AIM Registration
+title.msn.registration = MSN Registration
+title.yahoo.registration = Yahoo Registration
+title.registration.error = Registration Error
 
 
 menuitem.contacts = Contacts
@@ -366,8 +385,6 @@ group.conferences.found = Conference Services Found
 group.comma.delimited = Comma Delimited
 
 # TO DO
-# org.jivesoftware.sparkimpl.plugin.gateways
-# org.jivesoftware.sparkimpl.plugin.gateways.transports
 # org.jivesoftware.sparkimpl.plugin.jabber
 # org.jivesoftware.sparkimpl.plugin.layout
 # org.jivesoftware.sparkimpl.plugin.manager
