--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -47,6 +47,7 @@ button.decline = &Decline
 button.join = &Join
 button.save.for.future.use = &Save for future use
 button.register = &Register
+button.dial.number = &Dial Number
 
 
 checkbox.save.password = &Save Password
@@ -97,7 +98,13 @@ label.presence = &Presence
 label.message = &Message
 label.priority = P&riority
 label.enter.address = Enter Address
-
+label.jabber.address = &Jabber Address
+label.local.time = &Local Time
+label.software = &Software
+label.version = &Version
+label.os = &Operating System
+label.number = &Number
+label.dial = &Dial
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
@@ -247,7 +254,10 @@ message.enter.msn = Enter your MSN Screen Name and password below.
 message.enter.yahoo = Enter your Screen Name and password to connect to Yahoo.
 message.username.password.error = Username and/or Password need to be supplied.
 message.registration.transport.failed = Unable to register with Transport.
-
+message.client.information = Client information for {0}
+message.calling = Calling {0}
+message.number.to.call = Specify number to dial
+message.no.caller.id = No caller ID available.
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -308,7 +318,12 @@ title.aim.registration = AIM Registration
 title.msn.registration = MSN Registration
 title.yahoo.registration = Yahoo Registration
 title.registration.error = Registration Error
-
+title.jabber.browser = Browser
+title.version.and.time = Version and Time
+title.waiting.to.call = Waiting to place call
+title.incoming.call = Incoming Call
+title.on.the.phone = On The Phone
+title.dial.phone = Dial Phone
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
@@ -372,6 +387,7 @@ menuitem.broadcast.to.group = Broadcast message to group
 menuitem.alert.when.online = Alert when user is available
 menuitem.remove.alert.when.online = Remove Alert
 menuitem.save.as = Save as...
+menuitem.view.client.version = View Client Version
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
@@ -384,11 +400,9 @@ group.connection = Connection
 group.conferences.found = Conference Services Found
 group.comma.delimited = Comma Delimited
 
+tooltip.place.a.call = Place a call to this individual.
+
 # TO DO
-# org.jivesoftware.sparkimpl.plugin.jabber
-# org.jivesoftware.sparkimpl.plugin.layout
-# org.jivesoftware.sparkimpl.plugin.manager
-# org.jivesoftware.sparkimpl.plugin.phone
 # org.jivesoftware.sparkimpl.plugin.scratchpad
 # org.jivesoftware.sparkimpl.plugin.transcripts
 # org.jivesoftware.sparkimpl.plugin.viewer
