--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -258,6 +258,13 @@ message.client.information = Client information for {0}
 message.calling = Calling {0}
 message.number.to.call = Specify number to dial
 message.no.caller.id = No caller ID available.
+message.no.history.found = There is previous conversation history for this user.
+message.prompt.plugin.uninstall = Are you sure you want to uninstall {0}?
+message.restart.spark = You will need to restart Spark to have the changes take place.
+message.loading.please.wait = Loading. Please wait...
+message.plugins.not.available = Unable to contact the plugin repository.
+message.downloading = Downloading {0}
+message.downloading.spark.plug = Downloading Spark-Plug
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -324,6 +331,12 @@ title.waiting.to.call = Waiting to place call
 title.incoming.call = Incoming Call
 title.on.the.phone = On The Phone
 title.dial.phone = Dial Phone
+title.history.for = Conversation History For {0)
+title.reminder = Reminder
+title.plugins = Plugins
+title.preferences = Preferences
+
+
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
@@ -388,6 +401,7 @@ menuitem.alert.when.online = Alert when user is available
 menuitem.remove.alert.when.online = Remove Alert
 menuitem.save.as = Save as...
 menuitem.view.client.version = View Client Version
+menuitem.view.contact.history = View Contact History
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
@@ -395,17 +409,19 @@ tree.users.in.room = Users In Room
 tab.general = General
 tab.proxy = Proxy
 tab.contacts = Contacts
+tab.installed.plugins = Installed Plugins
+tab.available.plugins = Available Plugins
 
 group.connection = Connection
 group.conferences.found = Conference Services Found
 group.comma.delimited = Comma Delimited
 
-tooltip.place.a.call = Place a call to this individual.
+tooltip.place.a.call = Place a call to this individual
+tooltip.view.history = View conversation history
+tooltip.view.changelog = View Change Log
+tooltip.view.readme = View ReadMe
 
 # TO DO
-# org.jivesoftware.sparkimpl.plugin.scratchpad
-# org.jivesoftware.sparkimpl.plugin.transcripts
-# org.jivesoftware.sparkimpl.plugin.viewer
 # org.jivesoftware.sparkimpl.preference
 # org.jivesoftware.sparkimpl.preference.chat
 # org.jivesoftware.sparkimpl.preference.notifications
