--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -25,6 +25,8 @@ button.create.account = &Create Account
 button.close = C&lose
 button.advanced = Ad&vanced
 button.browse = &Browse...
+button.browse2 = B&rowse...
+button.browse3 = Br&owse...
 button.approve = &Approve
 button.deny = &Deny
 button.accept = &Accept
@@ -56,8 +58,23 @@ checkbox.use.proxy.server = &Use Proxy Server
 checkbox.auto.discover.port = &Automatically discover host and port
 checkbox.permanent = Room is &permanent
 checkbox.private.room = Room &is private
+checkbox.show.time.in.chat.window = &Show time in chat window
+checkbox.perform.spell.check = &Perform spell checking in background
+checkbox.show.notifications.in.conference = &Show notifications in conference rooms
+checkbox.disable.chat.history = &Disable Chat History
+checkbox.show.toaster = Show a &Toast Popup
+checkbox.window.to.front = &Bring window to front
+checkbox.play.sound.on.new.message = Play sound when new message &arrives
+checkbox.play.sound.when.offline = Play sound when user goes &offline
+checkbox.play.sound.on.outgoing.message = Play sound when message is &sent
 
 
+
+
+
+
+
+label.change.password.to = &Change Password To
 label.username = &Username
 label.name = &Name
 label.room.name = &Room Name
@@ -105,6 +122,7 @@ label.version = &Version
 label.os = &Operating System
 label.number = &Number
 label.dial = &Dial
+label.minutes.before.stale.chat = &Minutes before an inactive room becomes stale
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
@@ -265,6 +283,10 @@ message.loading.please.wait = Loading. Please wait...
 message.plugins.not.available = Unable to contact the plugin repository.
 message.downloading = Downloading {0}
 message.downloading.spark.plug = Downloading Spark-Plug
+message.unable.to.save.password = Unable to change password. Please see your server admin.
+message.delete.all.history = Delete all previous conversations?
+
+
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -335,6 +357,14 @@ title.history.for = Conversation History For {0)
 title.reminder = Reminder
 title.plugins = Plugins
 title.preferences = Preferences
+title.general.chat.settings = General Chat Settings
+title.chat = Chat
+title.notifications = Notifications
+title.sound.preferences = Sound Preferences
+title.sounds = Sounds
+title.choose.incoming.sound = Choose Incoming Sound File
+title.choose.outgoing.sound = Choose Outgoing Sound File
+title.choose.offline.sound = Choose Offline Sound File
 
 
 
@@ -415,16 +445,17 @@ tab.available.plugins = Available Plugins
 group.connection = Connection
 group.conferences.found = Conference Services Found
 group.comma.delimited = Comma Delimited
+group.general.information = General Information
+group.chat.window.information = Chat Window Information
+group.notification.options = Notification Options
 
 tooltip.place.a.call = Place a call to this individual
 tooltip.view.history = View conversation history
 tooltip.view.changelog = View Change Log
 tooltip.view.readme = View ReadMe
+tooltip.notifications = Notification preferences for incoming chats.
 
 # TO DO
-# org.jivesoftware.sparkimpl.preference
-# org.jivesoftware.sparkimpl.preference.chat
-# org.jivesoftware.sparkimpl.preference.notifications
 # org.jivesoftware.sparkimpl.preference.sounds
 # org.jivesoftware.sparkimpl.profile
 # org.jivesoftware.sparkimpl.profile.ext
