--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -20,6 +20,7 @@ open.folder = Open Folder
 retry = Retry
 active = Active
 not.registered = Not Registered
+save = Save
 
 button.create.account = &Create Account
 button.close = C&lose
@@ -50,6 +51,7 @@ button.join = &Join
 button.save.for.future.use = &Save for future use
 button.register = &Register
 button.dial.number = &Dial Number
+button.clear = &Clear
 
 
 checkbox.save.password = &Save Password
@@ -123,6 +125,24 @@ label.os = &Operating System
 label.number = &Number
 label.dial = &Dial
 label.minutes.before.stale.chat = &Minutes before an inactive room becomes stale
+label.company = &Company
+label.street.address = &Street Address
+label.city = &City
+label.state.and.province = S&tate/Province
+label.postal.code = &Postal Code
+label.country = C&ountry
+label.job.title = &Job Title
+label.department = &Department
+label.phone = &Phone
+label.fax = &Fax
+label.mobile = &Mobile
+label.web.page = &Web Page
+label.pager = &Pager
+label.first.name = &First Name
+label.middle.name = &Middle Name
+label.last.name = &Last Name
+label.email.address = &Email Address
+label.jid = &JID
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
@@ -285,8 +305,13 @@ message.downloading = Downloading {0}
 message.downloading.spark.plug = Downloading Spark-Plug
 message.unable.to.save.password = Unable to change password. Please see your server admin.
 message.delete.all.history = Delete all previous conversations?
-
-
+message.no.avatar.found = No avatar was configured by the user.
+message.image.too.large = This image is too large to use. Please specify an image 16k or smaller.
+message.save.profile = To save changes to your profile, click Save.
+message.unable.to.load.profile = Unable to locate a profile for {0}
+message.enter.jabber.id = Enter Jabber ID
+message.invalid.jabber.id = Not a valid Jabber ID
+message.vcard.not.supported = Server does not support VCards. Unable to save your VCard.
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -365,8 +390,11 @@ title.sounds = Sounds
 title.choose.incoming.sound = Choose Incoming Sound File
 title.choose.outgoing.sound = Choose Outgoing Sound File
 title.choose.offline.sound = Choose Offline Sound File
-
-
+title.edit.profile = Edit Profile Information
+title.profile.information = Profile Information
+title.profile.not.found = Profile Not Found
+title.view.profile.for = Viewing Profile For " + jid
+title.lookup.profile = Lookup Profile
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
@@ -432,6 +460,8 @@ menuitem.remove.alert.when.online = Remove Alert
 menuitem.save.as = Save as...
 menuitem.view.client.version = View Client Version
 menuitem.view.contact.history = View Contact History
+menuitem.edit.my.profile = &Edit My Profile...
+menuitem.lookup.profile = &Lookup Profile...
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
@@ -441,6 +471,10 @@ tab.proxy = Proxy
 tab.contacts = Contacts
 tab.installed.plugins = Installed Plugins
 tab.available.plugins = Available Plugins
+tab.personal = Personal
+tab.business = Business
+tab.home = Home
+tab.avatar = Avatar
 
 group.connection = Connection
 group.conferences.found = Conference Services Found
@@ -456,10 +490,7 @@ tooltip.view.readme = View ReadMe
 tooltip.notifications = Notification preferences for incoming chats.
 
 # TO DO
-# org.jivesoftware.sparkimpl.preference.sounds
 # org.jivesoftware.sparkimpl.profile
-# org.jivesoftware.sparkimpl.profile.ext
 # org.jivesoftware.sparkimpl.search.users
-# org.jivesoftware.sparkimpl.settings
 # org.jivesoftware.sparkimpl.settings.local
 # org.jivesoftware.sparkimpl.updater
