--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -52,6 +52,9 @@ button.save.for.future.use = &Save for future use
 button.register = &Register
 button.dial.number = &Dial Number
 button.clear = &Clear
+button.search = &Search
+button.add.service = &Add Service
+
 
 
 checkbox.save.password = &Save Password
@@ -143,6 +146,8 @@ label.middle.name = &Middle Name
 label.last.name = &Last Name
 label.email.address = &Email Address
 label.jid = &JID
+label.search.service = &Search Service
+
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
@@ -312,6 +317,10 @@ message.unable.to.load.profile = Unable to locate a profile for {0}
 message.enter.jabber.id = Enter Jabber ID
 message.invalid.jabber.id = Not a valid Jabber ID
 message.vcard.not.supported = Server does not support VCards. Unable to save your VCard.
+message.search.service.not.available = Unable to contact search service.
+message.no.results.found = No search results were returned by the server.
+message.name.of.search.service.question = Name of search service?
+message.search.for.other.people = Search for other people on the server.
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -395,6 +404,8 @@ title.profile.information = Profile Information
 title.profile.not.found = Profile Not Found
 title.view.profile.for = Viewing Profile For " + jid
 title.lookup.profile = Lookup Profile
+title.add.search.service = Add Search Service
+title.person.search = Person Search
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
@@ -462,6 +473,9 @@ menuitem.view.client.version = View Client Version
 menuitem.view.contact.history = View Contact History
 menuitem.edit.my.profile = &Edit My Profile...
 menuitem.lookup.profile = &Lookup Profile...
+menuitem.add.as.contact = Add as a contact
+menuitem.chat = Chat
+menuitem.view.profile = View Profile
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
@@ -482,6 +496,8 @@ group.comma.delimited = Comma Delimited
 group.general.information = General Information
 group.chat.window.information = Chat Window Information
 group.notification.options = Notification Options
+group.search.form = Search Form
+group.search.results = Search Results
 
 tooltip.place.a.call = Place a call to this individual
 tooltip.view.history = View conversation history
