--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -72,12 +72,11 @@ checkbox.window.to.front = &Bring window to front
 checkbox.play.sound.on.new.message = Play sound when new message &arrives
 checkbox.play.sound.when.offline = Play sound when user goes &offline
 checkbox.play.sound.on.outgoing.message = Play sound when message is &sent
-
-
-
-
-
-
+checkbox.auto.login = &Auto Login
+checkbox.save.password = &Save Password
+checkbox.idle.enabled = &Idle Enabled
+checkbox.launch.on.startup = &Launch on Startup
+checkbox.start.in.tray = &Start in System Tray
 
 label.change.password.to = &Change Password To
 label.username = &Username
@@ -147,7 +146,9 @@ label.last.name = &Last Name
 label.email.address = &Email Address
 label.jid = &JID
 label.search.service = &Search Service
-
+label.xmpp.port = &XMPP Port
+label.response.timeout = &Response Timeout (sec)
+label.time.till.idle = &Time till Idle (min)
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
@@ -321,6 +322,8 @@ message.search.service.not.available = Unable to contact search service.
 message.no.results.found = No search results were returned by the server.
 message.name.of.search.service.question = Name of search service?
 message.search.for.other.people = Search for other people on the server.
+message.specify.valid.time.error = Specify a valid timeout and port.
+message.timeout.error = The timeout must be 5 seconds or greater.
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -406,6 +409,9 @@ title.view.profile.for = Viewing Profile For " + jid
 title.lookup.profile = Lookup Profile
 title.add.search.service = Add Search Service
 title.person.search = Person Search
+title.login.settings = Login Settings
+title.login = Login
+
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
@@ -498,6 +504,7 @@ group.chat.window.information = Chat Window Information
 group.notification.options = Notification Options
 group.search.form = Search Form
 group.search.results = Search Results
+group.login.information = Login Information
 
 tooltip.place.a.call = Place a call to this individual
 tooltip.view.history = View conversation history
@@ -506,7 +513,4 @@ tooltip.view.readme = View ReadMe
 tooltip.notifications = Notification preferences for incoming chats.
 
 # TO DO
-# org.jivesoftware.sparkimpl.profile
-# org.jivesoftware.sparkimpl.search.users
-# org.jivesoftware.sparkimpl.settings.local
 # org.jivesoftware.sparkimpl.updater
