--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -21,6 +21,8 @@ retry = Retry
 active = Active
 not.registered = Not Registered
 save = Save
+yes = Yes
+no = No
 
 button.create.account = &Create Account
 button.close = C&lose
@@ -324,6 +326,14 @@ message.name.of.search.service.question = Name of search service?
 message.search.for.other.people = Search for other people on the server.
 message.specify.valid.time.error = Specify a valid timeout and port.
 message.timeout.error = The timeout must be 5 seconds or greater.
+message.version = Version: {0}
+message.file.size = File Size: {0}
+message.restart.spark = You will need to shut down the client to \n install the new version. Would you like to do that now?
+message.updating.cancelled = Updating has been cancelled.
+message.transfer.rate = Transfer Rate
+message.total.downloaded = Total Downloaded
+message.new.spark.available = {0} is now available. Would you like to install?
+message.restart.spark.to.install = You need to shut down the client to install latest version. Would you like to do that now?
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -411,6 +421,11 @@ title.add.search.service = Add Search Service
 title.person.search = Person Search
 title.login.settings = Login Settings
 title.login = Login
+title.downloading.im.client = Download IM Client
+title.upgrading.client = Upgrading Client
+title.cancelled = Cancelled
+title.new.version.available = New Version Available
+title.new.client.available = New Client Available
 
 
 menuitem.contacts = Contacts
@@ -511,6 +526,3 @@ tooltip.view.history = View conversation history
 tooltip.view.changelog = View Change Log
 tooltip.view.readme = View ReadMe
 tooltip.notifications = Notification preferences for incoming chats.
-
-# TO DO
-# org.jivesoftware.sparkimpl.updater
