--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -304,7 +304,7 @@ message.client.information = Client information for {0}
 message.calling = Calling {0}
 message.number.to.call = Specify number to dial
 message.no.caller.id = No caller ID available.
-message.no.history.found = There is previous conversation history for this user.
+message.no.history.found = There is no previous conversation history for this user.
 message.prompt.plugin.uninstall = Are you sure you want to uninstall {0}?
 message.restart.spark = You will need to restart Spark to have the changes take place.
 message.loading.please.wait = Loading. Please wait...
@@ -400,7 +400,7 @@ title.waiting.to.call = Waiting to place call
 title.incoming.call = Incoming Call
 title.on.the.phone = On The Phone
 title.dial.phone = Dial Phone
-title.history.for = Conversation History For {0)
+title.history.for = Conversation History For {0}
 title.reminder = Reminder
 title.plugins = Plugins
 title.preferences = Preferences
@@ -415,7 +415,7 @@ title.choose.offline.sound = Choose Offline Sound File
 title.edit.profile = Edit Profile Information
 title.profile.information = Profile Information
 title.profile.not.found = Profile Not Found
-title.view.profile.for = Viewing Profile For " + jid
+title.view.profile.for = Viewing Profile For {0}
 title.lookup.profile = Lookup Profile
 title.add.search.service = Add Search Service
 title.person.search = Person Search
