Adding escaped JID support.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5261 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -33,7 +33,7 @@ button.browse3 = Br&owse...
 button.approve = &Approve
 button.deny = &Deny
 button.accept = &Accept
-button.profile = *Profile
+button.profile = &Profile
 button.add.a.contact = &Add A Contact
 button.reconnect = &Reconnect
 button.add = &Add
@@ -334,6 +334,7 @@ message.transfer.rate = Transfer Rate
 message.total.downloaded = Total Downloaded
 message.new.spark.available = {0} is now available. Would you like to install?
 message.restart.spark.to.install = You need to shut down the client to install latest version. Would you like to do that now?
+message.add.to.roster = Add To Roster
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
