--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -335,6 +335,7 @@ message.total.downloaded = Total Downloaded
 message.new.spark.available = {0} is now available. Would you like to install?
 message.restart.spark.to.install = You need to shut down the client to install latest version. Would you like to do that now?
 message.add.to.roster = Add To Roster
+message.enter.room.password = Enter Room Password
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -427,7 +428,7 @@ title.upgrading.client = Upgrading Client
 title.cancelled = Cancelled
 title.new.version.available = New Version Available
 title.new.client.available = New Client Available
-
+title.password = Password
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
