--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -220,7 +220,7 @@ message.select.add.room.to.add = Selecione uma sala para adicionar a sua lista d
 message.bookmark.temporary.room.error = Voc\u00ea n\u00e3o pode marcar salas tempor\u00e1rias
 message.select.room.to.join = Selecione a sala para entrar.
 message.conference.info.error = Imposs\u00edvel receber informa\u00e7\u00f5es de confer\u00eancia. Tenter mais tarde.
-message.add.favorite.room = Adicionar Sala aos favoritos ou entrar direto.
+message.add.favorite.room = Adicionar aos favoritos ou participar da Sala.
 message.select.room.to.enter = Especifique a sala para entrar.
 message.find.conference.services = Encontrar servi\u00e7os de confer\u00eancia
 message.specify.information.for.conference = Especifique as informa\u00e7\u00f5es para a sala de confer\u00eancia
@@ -245,8 +245,8 @@ message.forbidden.error = Erro de permiss\u00e3o recebido.
 message.room.destroyed = A sala foi removida pela seguinte raz\u00e3o: {0}
 message.subject.has.been.changed.to = O assunto mudou para {0}.
 message.user.kicked.from.room = {0} foi expulso da sala.
-message.user.given.voice = Foi dado voz a {0}  nesta sala.
-message.user.voice.revoked = Voz revogada para {0}.
+message.user.given.voice = Foi dado a  palavra a {0}  nesta sala.
+message.user.voice.revoked = Palavra revogada para {0}.
 message.user.banned = {0} foi banido desta sala.
 message.user.granted.membership = {0} foi dado privil\u00e9gios de membro.
 message.user.revoked.membership = Remo\u00e7\u00e3o do membro {0}.
@@ -258,8 +258,8 @@ message.user.granted.admin = {0} possui Privil\u00e9gios de Administrador.
 message.user.revoked.admin = Privil\u00e9gios de Administrador foram revogados para {0}.
 message.user.nickname.changed = {0} agora \u00e9 {1}.
 message.your.kicked = Voc\u00ea foi expulso de {0}.
-message.your.voice.revoked = Voc\u00ea recebeu voz neste Chat.
-message.your.voice.revoked = Sua Voz foi revogada.
+message.your.voice.revoked = Voc\u00ea recebeu a palavra neste Chat.
+message.your.voice.revoked = Sua palavra foi revogada.
 message.your.banned = Voc\u00ea foi expulso desta sala.
 message.your.membership.granted = Voc\u00ea possui privil\u00e9gios de membro.
 message.your.membership.revoked = Sua associa\u00e7\u00e3o foi revogada.
@@ -279,7 +279,7 @@ message.user.now.available.to.chat = {0} est\u00e1 online as {1}
 message.user.is.sending.you.a.file = {0} est\u00e1 lhe enviando um arquivo.
 message.file.transfer.canceled = Voc\u00ea cancelou a transfer\u00eancia do arquivo.
 message.negotiate.file.transfer = Negociando transfer\u00eancia de Arquivo. Aguarde...
-message.negotiate.stream = Negociando transmissao. Aguarde...
+message.negotiate.stream = Negociando transmiss\u00e3o. Aguarde...
 message.receiving.file = Voc\u00ea est\u00e1 recebendo um arquivo de {0}
 message.click.to.open = Clique para abrir
 message.error.during.file.transfer = Ocorreu um erro durante a transfer\u00eancia.
@@ -344,7 +344,7 @@ title.account.create.registration = Registro de conta
 title.register.account = Registrar nova conta
 title.notification = Notifica\u00e7\u00e3o
 title.advanced.connection.preferences = Prefer\u00eancias Avan\u00e7adas de Conex\u00e3o
-title.preferences = Preferencias
+title.preferences = Prefer\u00eancias
 title.error = Erro
 title.status.message = Messagem de Status
 title.spark.preferences = Preferencias
@@ -354,7 +354,7 @@ title.tray.information = Tray Information
 title.select.file.to.send = Selecione Arquivo(s) Para Enviar
 title.choose.directory = Selecione a Pasta
 title.confirmation = Confirma\u00e7\u00e3o
-title.last.activity = Last Activity
+title.last.activity = Ultima atividade
 title.add.new.group = Adicionar novo grupo
 title.add.to.roster = Adicionar a Lista
 title.find.contacts = Buscar Contatos
@@ -376,7 +376,7 @@ title.find.conference.service = Encontrar servi\u00e7os de confer\u00eancia
 title.configure.chat.room = Configurar Janela de Chat
 title.conference.invitation = Convite de Confer\u00eancia
 title.join.conference.room = Entrar em Sala de Confer\u00eancia
-title.view.room.information = View Room Information
+title.view.room.information = Ver Informa\u00e7\u00f5es da Sala
 title.configure.room = Configurar Sala
 title.change.subject = Trocar Assunto
 title.enter.reason = Entre com o Motivo
@@ -438,7 +438,7 @@ menuitem.logout.with.status = Log out com motivo
 menuitem.show.traffic = Ver Janela de Tr\u00e1fego
 menuitem.check.for.updates = Verificar Atualiza\u00e7\u00f5es
 menuitem.help = Ajuda
-menuitem.preferences = Preferencias
+menuitem.preferences = Prefer\u00eancias
 menuitem.about = Sobre
 menuitem.online.help = Ajuda Online
 menuitem.open = Abrir
@@ -466,7 +466,7 @@ menuitem.ban = Banir
 menuitem.browse.service = Listar Servi\u00e7os
 menuitem.remove.service = Remover Servi\u00e7o
 menuitem.join.room = Entrar na Sala
-menuitem.remove.bookmark = Removere marcador
+menuitem.remove.bookmark = Remover marcador
 menuitem.join.on.startup = Entrar ao Iniciar
 menuitem.view.room.info = Ver Informa\u00e7\u00f5es da Sala
 menuitem.remove = Remover
@@ -474,9 +474,9 @@ menuitem.change.nickname = Trocar Apelido
 menuitem.block.user = Bloquear Usu\u00e1rio
 menuitem.unblock.user = Desbloquear Usu\u00e1rio
 menuitem.kick.user = Expulsar Usu\u00e1rio
-menuitem.voice = Voz
-menuitem.revoke.voice = Revogar Voz
-menuitem.grant.voice = Permitir Voz
+menuitem.voice = Palavra
+menuitem.revoke.voice = Revogar Palavra
+menuitem.grant.voice = Conceder Palavre
 menuitem.ban.user = Banir Usu\u00e1rio
 menuitem.grant.moderator = Permitir Moderador
 menuitem.revoke.moderator = Revogar Moderador
@@ -513,13 +513,13 @@ tab.home = Resid\u00eancia
 tab.avatar = Avatar
 
 group.connection = Conex\u00e3o
-group.conferences.found = Servi\u00e7o de Conferencia Encontrado
+group.conferences.found = Servi\u00e7o de Confer\u00eancia Encontrado
 group.comma.delimited = Delimitado por v\u00edrgula
 group.general.information = Informa\u00e7\u00f5es Gerais
 group.chat.window.information = Informa\u00e7\u00f5es da Janela de Chat
 group.notification.options = Op\u00e7\u00f5es de Notifica\u00e7\u00e3o
 group.search.form = Formul\u00e1rio de Busca
-group.search.results = Search Results
+group.search.results = Resultados da Busca
 group.login.information = Informa\u00e7\u00e3o de Login
 
 tooltip.place.a.call = Chamar este usu\u00e1rio
