Small logging change.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5276 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_en.properties
+++ b/src/resources/i18n/spark_i18n_en.properties
@@ -429,6 +429,7 @@ title.cancelled = Cancelled
 title.new.version.available = New Version Available
 title.new.client.available = New Client Available
 title.password = Password
+title.download.complete = Download Complete
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
