--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -1,4 +1,36 @@
-# Spark
+##
+## Spark Resource Bundle
+##
+## Additional locales can be specified by creating a new resource file in this
+## directory using the following conventions:
+##
+##   spark_i18n "_" language "_" country ".properties"
+##   spark_i18n "_" language ".properties"
+##
+## e.g.
+##    spark_i18n_en.propertis       <- English resources
+##    spark_i18n_en_US.properties   <- American US resources
+##    spark_i18n_de.properties      <- German resources
+##    spark_i18n_ja.properties      <- Japanese resources
+##
+## Please note that the two digit language code should be lower case, and the
+## two digit country code should be in uppercase. Often, it is not necessary to
+## specify the country code.
+##
+## A full list of language codes can be found at
+## http://www-old.ics.uci.edu/pub/ietf/http/related/iso639.txt
+## and a full list of country codes can be found at
+## http://www.chemie.fu-berlin.de/diverse/doc/ISO_3166.html
+##
+## In property strings that are parameterized, single quotes can be used to
+## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
+##
+## REVISION HISTORY (by Spark version):
+##
+## 2.0.1
+##      Added key: 'message.restart.spark.changes'
+##      Added key: 'message.enter.icq'
+##      Added key: 'title.icq.registration'
 
 ok = Ok
 cancel = Cancel
@@ -298,6 +330,7 @@ message.register.transports = Register with these available transports.
 message.enter.aim = Enter your AIM Screen Name and password below.
 message.enter.msn = Enter your MSN Screen Name and password below.
 message.enter.yahoo = Enter your Screen Name and password to connect to Yahoo.
+message.enter.icq = Enter your ICQ Screen Name and password below.
 message.username.password.error = Username and/or Password need to be supplied.
 message.registration.transport.failed = Unable to register with Transport.
 message.client.information = Client information for {0}
@@ -306,7 +339,7 @@ message.number.to.call = Specify number to dial
 message.no.caller.id = No caller ID available.
 message.no.history.found = There is no previous conversation history for this user.
 message.prompt.plugin.uninstall = Are you sure you want to uninstall {0}?
-message.restart.spark = You will need to restart Spark to have the changes take place.
+message.restart.spark.changes = Plugin will be removed on the next startup of Spark.
 message.loading.please.wait = Loading. Please wait...
 message.plugins.not.available = Unable to contact the plugin repository.
 message.downloading = Downloading {0}
@@ -395,6 +428,7 @@ title.transports = Transports
 title.aim.registration = AIM Registration
 title.msn.registration = MSN Registration
 title.yahoo.registration = Yahoo Registration
+title.icq.registration = ICQ Registration
 title.registration.error = Registration Error
 title.jabber.browser = Browser
 title.version.and.time = Version and Time
