--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -31,6 +31,7 @@
 ##      Added key: 'message.restart.spark.changes'
 ##      Added key: 'message.enter.icq'
 ##      Added key: 'title.icq.registration'
+##      Added key: 'button.quit'
 
 ok = Ok
 cancel = Cancel
@@ -88,6 +89,7 @@ button.dial.number = &Dial Number
 button.clear = &Clear
 button.search = &Search
 button.add.service = &Add Service
+button.quit = &Quit
 
 
 
