--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -32,6 +32,19 @@
 ##      Added key: 'message.enter.icq'
 ##      Added key: 'title.icq.registration'
 ##      Added key: 'button.quit'
+##
+##
+##
+## 2.0.2
+##     Added key: 'button.new'
+##     Added key: 'label.group'
+##     Added key: 'label.jabber.id'
+##     Added key: 'label.enter.group.name'
+##     Added key: 'title.new.roster.group'
+##     Added key: 'title.add.contact.group'
+##     Added key: 'message.add.contact.to.list'
+##     Added key: 'title.add.contact'
+
 
 ok = Ok
 cancel = Cancel
@@ -90,6 +103,7 @@ button.clear = &Clear
 button.search = &Search
 button.add.service = &Add Service
 button.quit = &Quit
+button.new = &New
 
 
 
@@ -185,6 +199,10 @@ label.search.service = &Search Service
 label.xmpp.port = &XMPP Port
 label.response.timeout = &Response Timeout (sec)
 label.time.till.idle = &Time till Idle (min)
+label.jabber.id = &Jabber ID
+label.group = &Group
+label.enter.group.name = Enter new group name
+
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
@@ -371,6 +389,7 @@ message.new.spark.available = {0} is now available. Would you like to install?
 message.restart.spark.to.install = You need to shut down the client to install latest version. Would you like to do that now?
 message.add.to.roster = Add To Roster
 message.enter.room.password = Enter Room Password
+message.add.contact.to.list = Add contact to contact list
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -466,6 +485,9 @@ title.new.version.available = New Version Available
 title.new.client.available = New Client Available
 title.password = Password
 title.download.complete = Download Complete
+title.new.roster.group = New Roster Group
+title.add.contact.group = Add Contact Group
+title.add.contact = Add Contact
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
